<resources>
    <string name="app_name">Phone DB</string>
    <string name="producer">Producer</string>
    <string name="model">Model</string>
    <string name="version">Android version</string>
    <string name="web_site">Web site</string>
    <string name="web_site_btn">WEB SITE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="error">Niepoprawne dane</string>
    <string name="website_error">Adres strony musi zaczynac sie od https://</string>

</resources>